# redback

./: .clang-format  .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  main.c
include/: CMakeLists.txt  log.h
include/redback/: connection.h  error.h  gunit.h  memory_pool.h  term.h
src/: CMakeLists.txt  lib.c  log.c
src/redback/: error.c  gunit.c  memory_pool.c  term.c
test/: CMakeLists.txt  test.c
test/redback/: memory_pool.c
